cabal-version: 2.2

name: autoexporter
version: 2.0.0.2

synopsis: Automatically re-export modules.
description: Autoexporter automatically re-exports modules.

build-type: Simple
category: Utility
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/autoexporter
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends:
    , base >= 4.13.0 && < 4.18
    , Cabal >= 3.0.1 && < 3.9
    , directory >= 1.3.6 && < 1.4
    , filepath >= 1.4.2 && < 1.5
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-unsafe
    -Wno-all-missed-specialisations
    -Wno-missed-specialisations

  if flag(pedantic)
    ghc-options: -Werror

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

common executable
  import: library

  build-depends: autoexporter
  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages

library
  import: library

  exposed-modules: Autoexporter
  hs-source-dirs: source/library

executable autoexporter
  import: executable

  hs-source-dirs: source/executable
  main-is: Main.hs
