cabal-version: 2.2

name: autoexporter
version: 2.0.0.10

synopsis: Automatically re-export modules.
description: Autoexporter automatically re-exports modules.

build-type: Simple
category: Utility
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/autoexporter
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends:
    , base >= 4.16.0 && < 4.20
    , Cabal-syntax >= 3.8.1.0 && < 3.13
    , directory >= 1.3.6 && < 1.4
    , filepath >= 1.4.2 && < 1.5
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library

  build-depends: autoexporter
  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages

library
  import: library

  exposed-modules: Autoexporter
  hs-source-dirs: source/library

executable autoexporter
  import: executable

  hs-source-dirs: source/executable
  main-is: Main.hs
